[feat] std for resume parser + hireability

--- a/edenai_apis/apis/modernmt/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/modernmt/outputs/translation/language_detection_output.json
@@ -1,7 +1,10 @@
 {
   "original_response": {
-    "detectedLanguage": "it",
-    "billedCharacters": 0
+    "status": 200,
+    "data": {
+      "detectedLanguage": "it",
+      "billedCharacters": 0
+    }
   },
   "standarized_response": {
     "items": [
