--- a/edenai_apis/apis/modernmt/outputs/translation/automatic_translation_output.json
+++ b/edenai_apis/apis/modernmt/outputs/translation/automatic_translation_output.json
@@ -1,8 +1,12 @@
 {
   "original_response": {
-    "translation": "Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines manufactured by humans. Generally, artificial intelligence refers to technology that presents human intelligence through ordinary computer programs. The term also points to the study of whether and how such an intelligent system can be achieved. At the same time, through advances in medicine, neuroscience, robotics and statistics, it is usually predicted that many human professions will gradually be replaced by them.",
-    "billedCharacters": 136,
-    "characters": 136
+    "status": 200,
+    "data": {
+      "translation": "Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines manufactured by humans. Generally, artificial intelligence refers to technology that presents human intelligence through ordinary computer programs. The term also points to the study of whether and how such an intelligent system can be achieved. At the same time, through advances in medicine, neuroscience, robotics and statistics, it is usually predicted that many human professions will gradually be replaced by them.",
+      "billedCharacters": 136,
+      "characters": 136,
+      "billed": true
+    }
   },
   "standarized_response": {
     "text": "Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines manufactured by humans. Generally, artificial intelligence refers to technology that presents human intelligence through ordinary computer programs. The term also points to the study of whether and how such an intelligent system can be achieved. At the same time, through advances in medicine, neuroscience, robotics and statistics, it is usually predicted that many human professions will gradually be replaced by them."
