--- a/edenai_apis/apis/google/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/google/outputs/translation/language_detection_output.json
@@ -10,7 +10,10 @@
   "standardized_response": {
     "items": [
       {
-        "language": "it",
+        "language": {
+          "code": "it",
+          "name": "Italian"
+        },
         "confidence": 1.0
       }
     ]
