--- a/edenai_apis/apis/ibm/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/ibm/outputs/translation/language_detection_output.json
@@ -310,7 +310,10 @@
   "standardized_response": {
     "items": [
       {
-        "language": "it",
+        "language": {
+          "code": "it",
+          "name": "Italian"
+        },
         "confidence": 0.9999999998396725
       }
     ]
