--- a/edenai_apis/apis/oneai/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/oneai/outputs/translation/language_detection_output.json
@@ -26,7 +26,10 @@
   "standardized_response": {
     "items": [
       {
-        "language": "Italian",
+        "language": {
+          "code": "it",
+          "name": "Italian"
+        },
         "confidence": null
       }
     ]
