--- a/edenai_apis/apis/microsoft/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/microsoft/outputs/translation/language_detection_output.json
@@ -14,13 +14,16 @@
         }
       ],
       "errors": [],
-      "modelVersion": "2021-11-20"
+      "modelVersion": "2022-10-01"
     }
   },
   "standardized_response": {
     "items": [
       {
-        "language": "it",
+        "language": {
+          "code": "it",
+          "name": "Italian"
+        },
         "confidence": 1.0
       }
     ]
