--- a/edenai_apis/features/translation/language_detection/language_detection_response.json
+++ b/edenai_apis/features/translation/language_detection/language_detection_response.json
@@ -1,7 +1,10 @@
 {
   "items": [
     {
-      "language": "Italian",
+      "language": {
+        "code": "it",
+        "name": "Italian"
+      },
       "confidence": 1.0
     }
   ]
