--- a/edenai_apis/apis/ibm/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/ibm/outputs/translation/language_detection_output.json
@@ -310,10 +310,8 @@
   "standardized_response": {
     "items": [
       {
-        "language": {
-          "code": "it",
-          "name": "Italian"
-        },
+        "language": "it",
+        "display_name": "Italian",
         "confidence": 0.9999999998396725
       }
     ]
