--- a/edenai_apis/apis/oneai/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/oneai/outputs/translation/language_detection_output.json
@@ -26,10 +26,8 @@
   "standardized_response": {
     "items": [
       {
-        "language": {
-          "code": "it",
-          "name": "Italian"
-        },
+        "language": "it",
+        "display_name": "Italian",
         "confidence": null
       }
     ]
