--- a/edenai_apis/apis/openai/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/openai/outputs/translation/language_detection_output.json
@@ -1,8 +1,8 @@
 {
   "original_response": {
-    "id": "cmpl-6MalMQe9bzKfU8Sn0WPOFELaNzICq",
+    "id": "cmpl-6NIm5L1GEAA2UZy89SwGO2q0XvkmC",
     "object": "text_completion",
-    "created": 1670842552,
+    "created": 1671011733,
     "model": "text-davinci-003",
     "choices": [
       {
@@ -21,43 +21,43 @@
             "\n"
           ],
           "token_logprobs": [
-            -0.031363424,
-            -0.00071832864,
-            -0.0042125713,
-            -0.0017597202,
-            -1.2024106,
-            -0.00014671094,
-            -0.00043020982,
-            -0.00032753454,
-            -0.0010402352
+            -0.024598012,
+            -0.0007722504,
+            -0.0039686826,
+            -0.0017248502,
+            -1.2132334,
+            -0.00014980942,
+            -0.00043700845,
+            -0.0003527561,
+            -0.0010178615
           ],
           "top_logprobs": [
             {
-              " it": -0.031363424
+              " it": -0.024598012
             },
             {
-              "<|endoftext|>": -0.00071832864
+              "<|endoftext|>": -0.0007722504
             },
             {
-              " \u00a7\u00a7": -0.0042125713
+              " \u00a7\u00a7": -0.0039686826
             },
             {
-              " FILE": -0.0017597202
+              " FILE": -0.0017248502
             },
             {
-              " READ": -1.2024106
+              " READ": -1.2132334
             },
             {
-              "ME": -0.00014671094
+              "ME": -0.00014980942
             },
             {
-              ".": -0.00043020982
+              ".": -0.00043700845
             },
             {
-              "md": -0.00032753454
+              "md": -0.0003527561
             },
             {
-              "\n": -0.0010402352
+              "\n": -0.0010178615
             }
           ],
           "text_offset": [
@@ -85,7 +85,8 @@
     "items": [
       {
         "language": " it",
-        "confidence": 0.9691233064003157
+        "display_name": "Italian",
+        "confidence": 0.9757020537220961
       }
     ]
   }
