--- a/edenai_apis/apis/modernmt/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/modernmt/outputs/translation/language_detection_output.json
@@ -10,6 +10,7 @@
     "items": [
       {
         "language": "it",
+        "display_name": "Italian",
         "confidence": null
       }
     ]
