--- a/edenai_apis/apis/neuralspace/outputs/translation/language_detection_output.json
+++ b/edenai_apis/apis/neuralspace/outputs/translation/language_detection_output.json
@@ -31,10 +31,8 @@
   "standardized_response": {
     "items": [
       {
-        "language": {
-          "code": "it",
-          "name": "Italian"
-        },
+        "language": "it",
+        "display_name": "Italian",
         "confidence": 0.9916812777519226
       }
     ]
