--- a/edenai_apis/features/translation/language_detection/language_detection_response.json
+++ b/edenai_apis/features/translation/language_detection/language_detection_response.json
@@ -1,10 +1,8 @@
 {
   "items": [
     {
-      "language": {
-        "code": "it",
-        "name": "Italian"
-      },
+      "language": "it",
+      "display_name": "Italian",
       "confidence": 1.0
     }
   ]
