--- a/edenai_apis/apis/openai/outputs/translation/automatic_translation_output.json
+++ b/edenai_apis/apis/openai/outputs/translation/automatic_translation_output.json
@@ -1,24 +1,24 @@
 {
   "original_response": {
-    "id": "cmpl-6MZaI5HQAM1dC0AiNfcTMdw0vrHAR",
+    "id": "cmpl-6gxWwxHDECL3W1z0e7dyvubCZgRUC",
     "object": "text_completion",
-    "created": 1670838022,
+    "created": 1675696630,
     "model": "text-davinci-003",
     "choices": [
       {
-        "text": "\n\nArtificial Intelligence, also known as Artificial Intelligence or Machine Intelligence, refers to the intelligence exhibited by machines created by humans. Generally, Artificial Intelligence refers to the technology that presents human intelligence through ordinary computer programs. The term also indicates whether such intelligent systems can be realized and how they can be realized. At the same time, with the progress of medicine, neuroscience, robotics and statistics, it is generally believed that many of the human professions are gradually being replaced by them.",
+        "text": " I am a king",
         "index": 0,
         "logprobs": null,
         "finish_reason": "stop"
       }
     ],
     "usage": {
-      "prompt_tokens": 314,
-      "completion_tokens": 95,
-      "total_tokens": 409
+      "prompt_tokens": 25,
+      "completion_tokens": 4,
+      "total_tokens": 29
     }
   },
   "standardized_response": {
-    "text": "\n\nArtificial Intelligence, also known as Artificial Intelligence or Machine Intelligence, refers to the intelligence exhibited by machines created by humans. Generally, Artificial Intelligence refers to the technology that presents human intelligence through ordinary computer programs. The term also indicates whether such intelligent systems can be realized and how they can be realized. At the same time, with the progress of medicine, neuroscience, robotics and statistics, it is generally believed that many of the human professions are gradually being replaced by them."
+    "text": " I am a king"
   }
 }
