--- a/edenai_apis/apis/openai/outputs/translation/automatic_translation_output.json
+++ b/edenai_apis/apis/openai/outputs/translation/automatic_translation_output.json
@@ -1,24 +1,24 @@
 {
   "original_response": {
-    "id": "cmpl-6gxWwxHDECL3W1z0e7dyvubCZgRUC",
+    "id": "cmpl-834OeugMnbwFsjBD2LxNb9HeJQcXk",
     "object": "text_completion",
-    "created": 1675696630,
-    "model": "text-davinci-003",
+    "created": 1695742576,
+    "model": "gpt-3.5-turbo-instruct",
     "choices": [
       {
-        "text": " I am a king",
+        "text": " Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines created by humans. Usually, artificial intelligence refers to the technology that attempts to replicate human intelligence through computer programs. The term also refers to the research of whether such intelligent systems can be realized and how they can be realized. At the same time, with advances in fields such as medicine, neuroscience, robotics, and statistics, it is believed that many human professions may gradually be replaced by it.",
         "index": 0,
         "logprobs": null,
         "finish_reason": "stop"
       }
     ],
     "usage": {
-      "prompt_tokens": 25,
-      "completion_tokens": 4,
-      "total_tokens": 29
+      "prompt_tokens": 220,
+      "completion_tokens": 94,
+      "total_tokens": 314
     }
   },
   "standardized_response": {
-    "text": " I am a king"
+    "text": " Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines created by humans. Usually, artificial intelligence refers to the technology that attempts to replicate human intelligence through computer programs. The term also refers to the research of whether such intelligent systems can be realized and how they can be realized. At the same time, with advances in fields such as medicine, neuroscience, robotics, and statistics, it is believed that many human professions may gradually be replaced by it."
   }
 }
