--- a/edenai_apis/apis/openai/outputs/translation/automatic_translation_output.json
+++ b/edenai_apis/apis/openai/outputs/translation/automatic_translation_output.json
@@ -1,24 +1,27 @@
 {
   "original_response": {
-    "id": "cmpl-834OeugMnbwFsjBD2LxNb9HeJQcXk",
-    "object": "text_completion",
-    "created": 1695742576,
-    "model": "gpt-3.5-turbo-instruct",
+    "id": "chatcmpl-8O2Cg7YCvk3hub78dnCBb6ZYhp7vT",
+    "object": "chat.completion",
+    "created": 1700739034,
+    "model": "gpt-3.5-turbo-1106",
     "choices": [
       {
-        "text": " Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines created by humans. Usually, artificial intelligence refers to the technology that attempts to replicate human intelligence through computer programs. The term also refers to the research of whether such intelligent systems can be realized and how they can be realized. At the same time, with advances in fields such as medicine, neuroscience, robotics, and statistics, it is believed that many human professions may gradually be replaced by it.",
         "index": 0,
-        "logprobs": null,
+        "message": {
+          "role": "assistant",
+          "content": "```Artificial intelligence, also known as machine intelligence, refers to the intelligence exhibited by machines created by humans. Usually, artificial intelligence refers to the technology that presents human intelligence through ordinary computer programs. The term also refers to the research on whether such intelligent systems can be realized and how to achieve them. At the same time, with advancements in fields such as medicine, neuroscience, robotics, and statistics, it is commonly predicted that many human professions will gradually be replaced by artificial intelligence.```"
+        },
         "finish_reason": "stop"
       }
     ],
     "usage": {
-      "prompt_tokens": 220,
-      "completion_tokens": 94,
-      "total_tokens": 314
-    }
+      "prompt_tokens": 270,
+      "completion_tokens": 97,
+      "total_tokens": 367
+    },
+    "system_fingerprint": "fp_eeff13170a"
   },
   "standardized_response": {
-    "text": " Artificial intelligence, also known as intelligent machines, refers to the intelligence exhibited by machines created by humans. Usually, artificial intelligence refers to the technology that attempts to replicate human intelligence through computer programs. The term also refers to the research of whether such intelligent systems can be realized and how they can be realized. At the same time, with advances in fields such as medicine, neuroscience, robotics, and statistics, it is believed that many human professions may gradually be replaced by it."
+    "text": "```Artificial intelligence, also known as machine intelligence, refers to the intelligence exhibited by machines created by humans. Usually, artificial intelligence refers to the technology that presents human intelligence through ordinary computer programs. The term also refers to the research on whether such intelligent systems can be realized and how to achieve them. At the same time, with advancements in fields such as medicine, neuroscience, robotics, and statistics, it is commonly predicted that many human professions will gradually be replaced by artificial intelligence.```"
   }
 }
